fix: prevent layout shifting when switching to page with no scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  padding-left: calc(100vw - 100%);
+}
+
 ::-webkit-scrollbar {
   width: 17.5px;
   background: transparent;
